# buzzer

./: .gitignore  .rustfmt.toml  1  Cargo.toml  README.md
client/: Cargo.toml  README.md  index.html  make  package.json  rollup.config.js  style.css
client/public/: actual-index.html  global.css  index.html
client/src/: App.svelte  CommandBuilder.svelte  DisplayBuzzer.svelte  DisplayHistory.svelte  DisplayScores.svelte  DisplaySingleHistEntry.svelte  DisplaySingleScore.svelte  HostUtils.svelte  SelectBuzzKey.svelte  SelectBuzzKeys.svelte  Setup.svelte  lib.rs  stores.ts  types.ts  utils.rs  utils.ts
client/src/app/: buzz_keys.rs  display_buzzer.rs  display_scores.rs  host_utils.rs  mod.rs  setup.rs
src/: command.rs  contestant.coffee  host.coffee  main.rs  registry.rs  scorekeeper.rs  state.rs  structs.rs  websockets.rs
static/: contestant.js  host.js  index.html  name.html  op.html  play.html  play.js  read.html  read.js  style.css  temp-not-needed.html
static/new/: global.css
static/old/: contestant.html  host.html  host.js  index.html  op.js  style.css
util/: Cargo.toml
util/src/: command.rs  lib.rs  state.rs  tests.rs
