[package]
name    = "buzzer"
version = "0.1.0"
authors = ["Jacob Henn <windowWeasel@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
serde_json  = "1.0.59"
env_logger  = "0.8.2"
actix-web   = "3.3.2"
chrono      = "0.4.19"
serde       = "1.0"
rand        = "0.8.3"
log         = { version = "0.4.14", features = ["serde"] }
