[package]
name = "client"
version = "6.0.0-dev.41"
authors = ["Jacob Henn <windowWeasel@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_log = "0.2"
log = "0.4"
mogwai = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
rmp-serde = "0.15"
util = { path = "../util", features = [] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Event",
    "EventTarget",
    "Attr",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Window",
    "Location",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "KeyboardEvent",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
