[package]
name = "util"
version = "0.1.0"
authors = ["Jacob Henn <windowWeasel@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
serde       = { version = "1", features = ["derive"] }
actix       = { version = "0.10", optional = true }
log         = "0.4"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[profile.test]
opt-level = "z"
